// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test articles reducer should get message about a problem with authentication 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about adding article to database 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about article's adding fail 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about article's modifying fail 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about article's removing fail 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about articles list's not finding 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about modifying article in database 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about removing article from database 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should get message about single article's not finding 1`] = `
Object {
  "articles": Array [],
  "errorMessage": "Ważna wiadomość z serwera!",
  "message": "Ważna wiadomość z serwera!",
  "properArticle": Object {},
}
`;

exports[`test articles reducer should load a single article 1`] = `
Object {
  "_id": "1111-2222-3333-4444",
  "allocationKey": "test-article",
  "articles": Array [],
  "author": "tester",
  "content": "Zawartość artykułu testowego",
  "date": "01-01-2020",
  "errorMessage": "",
  "properArticle": undefined,
  "title": "Artykuł testowy",
}
`;

exports[`test articles reducer should load articles list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "allocationKey": "test-article",
    "author": "tester",
    "content": "Zawartość artykułu testowego",
    "date": "01-01-2020",
    "title": "Artykuł testowy",
  },
  "articles": undefined,
  "errorMessage": "",
  "properArticle": Object {},
}
`;
